<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:diagonal_angle="10"
        app:diagonal_direction="left"
        app:diagonal_position="bottom">

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="-50dp"
            android:layout_marginEnd="-50dp"
            android:background="@drawable/bg_overlay"
            android:orientation="horizontal"
            android:rotation="-10" />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:layout_marginBottom="35dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="marquee"
                                    android:marqueeRepeatLimit="marquee_forever"
                                    android:singleLine="true"
                                    android:text="Name Destinasi"
                                    android:textColor="@android:color/white"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="150dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <ImageView
                        android:id="@+id/imgPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_image" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Category :"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvCategory"
                            android:text="Ini alamat"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/tvDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Duration :"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvDuration"
                            android:text="ini Duration"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/tvDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="DESKRIPSI :"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvDeskripsi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvDesc"
                            android:layout_marginTop="5dp"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>